<resources>
    <string name="app_name">InstaTram</string>

    <!-- Action bar titles !-->
    <string name="title_activity_home">InstaTram</string>
    <string name="title_activity_photos">Photos</string>

    <!-- Action bar menu !-->
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="title_language">Language</string>
    <string name="title_theme">Theme</string>

    <!-- Settings !-->
    <string name="choice_language">Choose Language</string>
    <string name="choice_theme">Choose a theme</string>

    <string name="created_success">Created!</string>
    <string name="created_failed">Failed to create</string>
    <string name="delete_success">Deleted!</string>
    <string name="delete_failed">Failed to delete</string>

    <string name="button_camera">Camera</string>
    <string name="button_delete">Delete</string>


    <string name="edit_title_hint">Title</string>
    <string name="title_empty_message">Title can\'t be empty!</string>
    <string name="title_long_message">Title too long!</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>

</resources>