<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/title_home"
        app:showAsAction="never" />

    <item android:id="@+id/map"
        android:title="@string/title_map"
        app:showAsAction="never"/>

    <item
        android:id="@+id/settings"
        android:title="@string/title_settings"
        app:showAsAction="never">

        <menu android:id="@+id/secondmenu">
            <item
                android:id="@+id/language"
                android:title="@string/title_language"
                app:showAsAction="never" />


            <item
                android:id="@+id/theme"
                android:title="@string/title_theme"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>